# wsi-datasets

./: .gitignore  README.md  pyproject.toml
example_data/: histology_annotations.geojson  histology_image_map.html
src/: base.py  classification_dataset.py  segmentation_dataset.py  tileserver.py
tests/: test_base.py  test_classification.py  test_segmentation.py
