[project]
name = "wsi-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "joblib>=1.5.3",
    "large-image>=1.34.2",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "shapely>=2.1.2",
    "torch>=2.12.0",
    "tqdm>=4.68.1",
    "uvicorn>=0.49.0",
]
